--- a/src/main/resources/messages_se_SE.properties
+++ b/src/main/resources/messages_se_SE.properties
@@ -23,7 +23,7 @@ zymejimoPaaiskinimai.hazard-1=Unknown food additives
 zymejimoPaaiskinimai.hazard-1.desc=we know nothing about the hazards of this ingredient. 
 zymejimoPaaiskinimai.hazard0=No food additives
 zymejimoPaaiskinimai.hazard0.desc=The manufacturer does not indicate additives among the product's ingredients.  
-zymejimoPaaiskinimai.hazard1=Considered safe food additives
+zymejimoPaaiskinimai.hazard1=Considered safe food additivesss
 zymejimoPaaiskinimai.hazard1.desc=The product contains additives whose effect is unknown or has been scientifically proven safe.
 zymejimoPaaiskinimai.hazard2=Questionable food additives
 zymejimoPaaiskinimai.hazard2.desc=Some sources claim these additives might have an adverse effect on human health. However, there is no indisputable proof that the impact is widely experienced. It is advisable to maintain caution if products with these additives are to be consumed by children (esp. under 3 years old) and adults with increased sensitivity or an inclination towards particular conditions. 
