--- a/src/main/resources/messages_se_SE.properties
+++ b/src/main/resources/messages_se_SE.properties
@@ -3,7 +3,7 @@ site.attention = Attention\!
 site.email = info@inbelly.co.uk
 site.domain = inbelly.co.uk
 site.blog = blog.inbelly.co.uk
-site.description = Artificial additives in food have become a huge problem. Manufacturers are convincing us that all food additives used in the EU are safe, although scientific facts tell an altogether different story.\n\nOur idea is to gather all the info about food additive (colors, preservatives, flavor enhancers and other E numbers) as well as possible consequences of their consumption and show the products containing them.
+site.description = Konstgjorda tillsatser i livsmedel har blivit ett stort problem. Tillverkarna övertyga oss om att alla livsmedelstillsatser som används inom EU är säkra, men vetenskapliga fakta talar ett helt annat historia.\n\nVår idé är att samla all info om livsmedelstillsats (färger, konserveringsmedel, smakförstärkare och andra numren E) samt möjliga konsekvenser av deras konsumtion och visa de produkter som innehåller dessa.
 
 index.blogUrl=http://blog.inbelly.co.uk
 index.faceBookUrl=http://www.facebook.com/inbelly
@@ -12,61 +12,61 @@ bottomLinks.mailUrl=mailto:info@inbelly.co.uk
 bottomLinks.blogUrl=http://blog.inbelly.co.uk
 
 #Kenksmingumai
-hazard.-1.desc=Unknown 
-hazard.0.desc=No 
-hazard.1.desc=Considered safe
-hazard.2.desc=Questionable
-hazard.3.desc=Hazardous
-hazard.4.desc=Banned in some countries
+hazard.-1.desc = Okänd
+hazard.0.desc = Ingen
+hazard.1.desc = Vara säker
+hazard.2.desc = Tvivelaktigt
+hazard.3.desc = Farligt
+hazard.4.desc = Förbjudet i vissa länder
 
-zymejimoPaaiskinimai.hazard-1=Unknown food additives
-zymejimoPaaiskinimai.hazard-1.desc=we know nothing about the hazards of this ingredient. 
-zymejimoPaaiskinimai.hazard0=No food additives
-zymejimoPaaiskinimai.hazard0.desc=The manufacturer does not indicate additives among the product's ingredients.  
-zymejimoPaaiskinimai.hazard1=Considered safe food additives
-zymejimoPaaiskinimai.hazard1.desc=The product contains additives whose effect is unknown or has been scientifically proven safe.
-zymejimoPaaiskinimai.hazard2=Questionable food additives
-zymejimoPaaiskinimai.hazard2.desc=Some sources claim these additives might have an adverse effect on human health. However, there is no indisputable proof that the impact is widely experienced. It is advisable to maintain caution if products with these additives are to be consumed by children (esp. under 3 years old) and adults with increased sensitivity or an inclination towards particular conditions. 
-zymejimoPaaiskinimai.hazard3=Hazardous food additives
-zymejimoPaaiskinimai.hazard3.desc=There are scientific claims proving that greater amounts of this additive or its compound with other additives may result in a health risk. Manufacturers are advised to limit the use of these additives.
-zymejimoPaaiskinimai.hazard4=Banned in some countries food additives
-zymejimoPaaiskinimai.hazard4.desc=The use of this additive is banned in one or more of these countries\: USA, Canada, Australia, New Zealand (explicitly specified for each additive). Decide for yourself\!
-zymejimoPaaiskinimai.notVegan=May be of animal origin
-zymejimoPaaiskinimai.notVegan.desc=The additive may have been manufactured with animal ingredients. However, it may also be synthetic. 
-zymejimoPaaiskinimai.gmo=May contain GMO
-zymejimoPaaiskinimai.gmo.desc=The product contains additives that are either genetically modified themselves or have been produced using genetically modified material.
+zymejimoPaaiskinimai.hazard-1 = Okänd livsmedelstillsatser
+zymejimoPaaiskinimai.hazard-1.desc = Vet vi ingenting om riskerna med denna ingrediens.
+zymejimoPaaiskinimai.hazard0 = Ingen livsmedelstillsatser
+zymejimoPaaiskinimai.hazard0.desc = Tillverkaren inte anger tillsatser bland produktens ingredienser.
+zymejimoPaaiskinimai.hazard1 = Vara säker livsmedelstillsatser
+zymejimoPaaiskinimai.hazard1.desc = Produkten innehåller tillsatser vars effekt är okänd eller har varit vetenskapligt bevisat säker.
+zymejimoPaaiskinimai.hazard2 = Tvivelaktigt livsmedelstillsatser
+zymejimoPaaiskinimai.hazard2.desc = Vissa källor hävdar dessa tillsatser kan ha en negativ inverkan på människors hälsa. Det finns dock inget obestridligt bevis på att effekterna är allmänt upplevs. Det är lämpligt att behålla försiktighet om produkter med dessa tillsatser är att konsumeras av barn (särskilt under 3 år) och vuxna med ökad känslighet eller en benägenhet för särskilda villkor.
+zymejimoPaaiskinimai.hazard3 = Farliga livsmedelstillsatser
+zymejimoPaaiskinimai.hazard3.desc = Det finns vetenskapliga påståenden bevisar att större mängder av denna tillsats eller dess förening med andra tillsatser kan resultera i en hälsorisk. Tillverkare rekommenderas att begränsa användningen av dessa tillsatser.
+zymejimoPaaiskinimai.hazard4 = Förbjudet i vissa länder livsmedelstillsatser
+zymejimoPaaiskinimai.hazard4.desc = Användningen av denna tillsats är förbjudet i en eller flera av dessa länder\: USA, Kanada, Australien, Nya Zeeland (explicit anges för varje tillsats). Bestäm själv\!
+zymejimoPaaiskinimai.notVegan = Kan vara av animaliskt ursprung
+zymejimoPaaiskinimai.notVegan.desc = Tillsatsen kan ha tillverkats med animaliska ingredienser. Emellertid kan det också vara syntetiska.
+zymejimoPaaiskinimai.gmo = Kan innehålla GMO
+zymejimoPaaiskinimai.gmo.desc = Produkten innehåller tillsatser som är genetiskt modifierade själva eller har framställts med hjälp av genetiskt modifierat material.
 zymejimoPaaiskinimai.legal1=XXXX * XXXX Pagal Lietuvos higienos norm\u0105 HN 119\:2002 ir HN 53\:2003, gamintojas privalo skelbti maisto produkt\u0173 sud\u0117t\u012F.
-zymejimoPaaiskinimai.legal2=XXXX ** We have gathered information about the adverse health effects of additives in specified scientifically grounded sources. Alternative research may deny these claims. <br/>Manufacturers tend to disagree with most of these findings.
+zymejimoPaaiskinimai.legal2 = XXXX ** Vi har samlat in information om de negativa hälsoeffekterna av tillsatser i specificerade vetenskapligt jordade källor. Alternativ forskning kan neka dessa påståenden. <br/> Tillverkare tenderar att vara oense med de flesta av dessa fynd.
 
 
 
 #Bind errorai
-product.name.required=Please enter product name
-product.company.required=Please enter product manufacturer
-product.category.required=Please enter product category
-product.conservantsText.required=Please enter additives in this product
-product.grouping.required=Please enter product category
-product.user.nick.required=Please enter your name
+product.name.required = Ange produktnamn
+product.company.required = Ange tillverkaren
+product.category.required = Ange produktkategori
+product.conservantsText.required = Ange tillsatser i produkten
+product.grouping.required = Ange produktkategori
+product.user.nick.required = Ange ditt namn
 
 #Validatoriai
-comment.error.notext = Please enter review text
-comment.error.noname = Please enter your name
-e.error.nonumber = Please indicate E number!
-product.error.noname=Please enter product name
-product.error.conservantfree=If there are additives in this product, 'None' checkbox must be clear
-product.error.noconservants=If there are no additives in this product, please tick the 'None' checkbox
-user.error.nonick = Please enter your name
-user.error.noemail = Please enter your email.
-user.error.bademail = Invalid email.
-user.error.emailexists = This email address is already in use. 
-user.error.nopassword = Please enter a password.
-user.error.passwordsdontmatch = Passwords do not match.
-user.error.nickexists = This username is already in use.
-uploadService.ioexception=The file could not be copied. Please contact the administrator. 
-uploadService.wrongFileType=Wrong file format chosen. Please upload a picture.
-uploadService.productPhotoNotSpecified =Please upload a product photo.
-uploadService.productIngredientsPhotoNotSpecified=Please upload a photo of the ingredient list.
-uploadService.ingredientsImageIsTooSmall=Photo of the ingredient list is too small. 
+comment.error.notext = Ange översyn text
+comment.error.noname = Ange ditt namn
+e.error.nonumber = Ange E-nummer!
+product.error.noname = Ange produktnamn
+product.error.conservantfree = Om det finns tillsatser i produkten måste "Inga" kryssrutan vara tydlig
+product.error.noconservants = Om det inte finns några tillsatser i produkten, kryssa för "Ingen" kryssrutan
+user.error.nonick = Ange ditt namn
+user.error.noemail = Ange e-post.
+user.error.bademail = Ogiltig e-post.
+user.error.emailexists = Denna e-postadress används redan.
+user.error.nopassword = Ange ett lösenord.
+user.error.passwordsdontmatch = Lösenorden stämmer inte överens.
+user.error.nickexists = Det här användarnamnet används redan.
+uploadService.ioexception = Filen kunde inte kopieras. Vänligen kontakta administratören.
+uploadService.wrongFileType = Fel filformat valt. Lägg upp en bild.
+uploadService.productPhotoNotSpecified = Lägg upp en produkt foto.
+uploadService.productIngredientsPhotoNotSpecified = Lägg upp en bild på ingredienslistan.
+uploadService.ingredientsImageIsTooSmall = Foto av ingredienslistan är för liten.
 
 #Emailai
 mail.subject.productProblemsubject = Problem with a product
