--- a/src/main/resources/messages_se_SE.properties
+++ b/src/main/resources/messages_se_SE.properties
@@ -3,7 +3,7 @@ site.attention = Attention\!
 site.email = info@inbelly.co.uk
 site.domain = inbelly.co.uk
 site.blog = blog.inbelly.co.uk
-site.description = Konstgjorda tillsatser i livsmedel har blivit ett stort problem. Tillverkarna Ã¶vertyga oss om att alla livsmedelstillsatser som anvÃ¤nds inom EU Ã¤r sÃ¤kra, men vetenskapliga fakta talar ett helt annat historia.\n\nVÃ¥r idÃ© Ã¤r att samla all info om livsmedelstillsats (fÃ¤rger, konserveringsmedel, smakfÃ¶rstÃ¤rkare och andra numren E) samt mÃ¶jliga konsekvenser av deras konsumtion och visa de produkter som innehÃ¥ller dessa.
+site.description = Konstgjorda tillsatser i livsmedel har blivit ett stort problem. Tillverkarna övertyga oss om att alla livsmedelstillsatser som används inom EU är säkra, men vetenskapliga fakta talar ett helt annat historia.\n\nVår idé är att samla all info om livsmedelstillsats (färger, konserveringsmedel, smakförstärkare och andra numren E) samt möjliga konsekvenser av deras konsumtion och visa de produkter som innehåller dessa.
 
 index.blogUrl=http://blog.inbelly.co.uk
 index.faceBookUrl=http://www.facebook.com/inbelly
@@ -12,31 +12,31 @@ bottomLinks.mailUrl=mailto:info@inbelly.co.uk
 bottomLinks.blogUrl=http://blog.inbelly.co.uk
 
 #Kenksmingumai
-hazard.-1.desc = OkÃ¤nd
+hazard.-1.desc = Okänd
 hazard.0.desc = Ingen
-hazard.1.desc = Vara sÃ¤ker
+hazard.1.desc = Vara säker
 hazard.2.desc = Tvivelaktigt
 hazard.3.desc = Farligt
-hazard.4.desc = FÃ¶rbjudet i vissa lÃ¤nder
+hazard.4.desc = Förbjudet i vissa länder
 
-zymejimoPaaiskinimai.hazard-1 = OkÃ¤nd livsmedelstillsatser
+zymejimoPaaiskinimai.hazard-1 = Okänd livsmedelstillsatser
 zymejimoPaaiskinimai.hazard-1.desc = Vet vi ingenting om riskerna med denna ingrediens.
 zymejimoPaaiskinimai.hazard0 = Ingen livsmedelstillsatser
 zymejimoPaaiskinimai.hazard0.desc = Tillverkaren inte anger tillsatser bland produktens ingredienser.
-zymejimoPaaiskinimai.hazard1 = Vara sÃ¤ker livsmedelstillsatser
-zymejimoPaaiskinimai.hazard1.desc = Produkten innehÃ¥ller tillsatser vars effekt Ã¤r okÃ¤nd eller har varit vetenskapligt bevisat sÃ¤ker.
+zymejimoPaaiskinimai.hazard1 = Vara säker livsmedelstillsatser
+zymejimoPaaiskinimai.hazard1.desc = Produkten innehåller tillsatser vars effekt är okänd eller har varit vetenskapligt bevisat säker.
 zymejimoPaaiskinimai.hazard2 = Tvivelaktigt livsmedelstillsatser
-zymejimoPaaiskinimai.hazard2.desc = Vissa kÃ¤llor hÃ¤vdar dessa tillsatser kan ha en negativ inverkan pÃ¥ mÃ¤nniskors hÃ¤lsa. Det finns dock inget obestridligt bevis pÃ¥ att effekterna Ã¤r allmÃ¤nt upplevs. Det Ã¤r lÃ¤mpligt att behÃ¥lla fÃ¶rsiktighet om produkter med dessa tillsatser Ã¤r att konsumeras av barn (sÃ¤rskilt under 3 Ã¥r) och vuxna med Ã¶kad kÃ¤nslighet eller en benÃ¤genhet fÃ¶r sÃ¤rskilda villkor.
+zymejimoPaaiskinimai.hazard2.desc = Vissa källor hävdar dessa tillsatser kan ha en negativ inverkan på människors hälsa. Det finns dock inget obestridligt bevis på att effekterna är allmänt upplevs. Det är lämpligt att behålla försiktighet om produkter med dessa tillsatser är att konsumeras av barn (särskilt under 3 år) och vuxna med ökad känslighet eller en benägenhet för särskilda villkor.
 zymejimoPaaiskinimai.hazard3 = Farliga livsmedelstillsatser
-zymejimoPaaiskinimai.hazard3.desc = Det finns vetenskapliga pÃ¥stÃ¥enden bevisar att stÃ¶rre mÃ¤ngder av denna tillsats eller dess fÃ¶rening med andra tillsatser kan resultera i en hÃ¤lsorisk. Tillverkare rekommenderas att begrÃ¤nsa anvÃ¤ndningen av dessa tillsatser.
-zymejimoPaaiskinimai.hazard4 = FÃ¶rbjudet i vissa lÃ¤nder livsmedelstillsatser
-zymejimoPaaiskinimai.hazard4.desc = AnvÃ¤ndningen av denna tillsats Ã¤r fÃ¶rbjudet i en eller flera av dessa lÃ¤nder\: USA, Kanada, Australien, Nya Zeeland (explicit anges fÃ¶r varje tillsats). BestÃ¤m sjÃ¤lv\!
+zymejimoPaaiskinimai.hazard3.desc = Det finns vetenskapliga påståenden bevisar att större mängder av denna tillsats eller dess förening med andra tillsatser kan resultera i en hälsorisk. Tillverkare rekommenderas att begränsa användningen av dessa tillsatser.
+zymejimoPaaiskinimai.hazard4 = Förbjudet i vissa länder livsmedelstillsatser
+zymejimoPaaiskinimai.hazard4.desc = Användningen av denna tillsats är förbjudet i en eller flera av dessa länder\: USA, Kanada, Australien, Nya Zeeland (explicit anges för varje tillsats). Bestäm själv\!
 zymejimoPaaiskinimai.notVegan = Kan vara av animaliskt ursprung
-zymejimoPaaiskinimai.notVegan.desc = Tillsatsen kan ha tillverkats med animaliska ingredienser. Emellertid kan det ocksÃ¥ vara syntetiska.
-zymejimoPaaiskinimai.gmo = Kan innehÃ¥lla GMO
-zymejimoPaaiskinimai.gmo.desc = Produkten innehÃ¥ller tillsatser som Ã¤r genetiskt modifierade sjÃ¤lva eller har framstÃ¤llts med hjÃ¤lp av genetiskt modifierat material.
+zymejimoPaaiskinimai.notVegan.desc = Tillsatsen kan ha tillverkats med animaliska ingredienser. Emellertid kan det också vara syntetiska.
+zymejimoPaaiskinimai.gmo = Kan innehålla GMO
+zymejimoPaaiskinimai.gmo.desc = Produkten innehåller tillsatser som är genetiskt modifierade själva eller har framställts med hjälp av genetiskt modifierat material.
 zymejimoPaaiskinimai.legal1=XXXX * XXXX Pagal Lietuvos higienos norm\u0105 HN 119\:2002 ir HN 53\:2003, gamintojas privalo skelbti maisto produkt\u0173 sud\u0117t\u012F.
-zymejimoPaaiskinimai.legal2 = XXXX ** Vi har samlat in information om de negativa hÃ¤lsoeffekterna av tillsatser i specificerade vetenskapligt jordade kÃ¤llor. Alternativ forskning kan neka dessa pÃ¥stÃ¥enden. <br/> Tillverkare tenderar att vara oense med de flesta av dessa fynd.
+zymejimoPaaiskinimai.legal2 = XXXX ** Vi har samlat in information om de negativa hälsoeffekterna av tillsatser i specificerade vetenskapligt jordade källor. Alternativ forskning kan neka dessa påståenden. <br/> Tillverkare tenderar att vara oense med de flesta av dessa fynd.
 
 
 
@@ -49,24 +49,24 @@ product.grouping.required = Ange produktkategori
 product.user.nick.required = Ange ditt namn
 
 #Validatoriai
-comment.error.notext = Ange Ã¶versyn text
+comment.error.notext = Ange översyn text
 comment.error.noname = Ange ditt namn
 e.error.nonumber = Ange E-nummer!
 product.error.noname = Ange produktnamn
-product.error.conservantfree = Om det finns tillsatser i produkten mÃ¥ste "Inga" kryssrutan vara tydlig
-product.error.noconservants = Om det inte finns nÃ¥gra tillsatser i produkten, kryssa fÃ¶r "Ingen" kryssrutan
+product.error.conservantfree = Om det finns tillsatser i produkten måste "Inga" kryssrutan vara tydlig
+product.error.noconservants = Om det inte finns några tillsatser i produkten, kryssa för "Ingen" kryssrutan
 user.error.nonick = Ange ditt namn
 user.error.noemail = Ange e-post.
 user.error.bademail = Ogiltig e-post.
-user.error.emailexists = Denna e-postadress anvÃ¤nds redan.
-user.error.nopassword = Ange ett lÃ¶senord.
-user.error.passwordsdontmatch = LÃ¶senorden stÃ¤mmer inte Ã¶verens.
-user.error.nickexists = Det hÃ¤r anvÃ¤ndarnamnet anvÃ¤nds redan.
-uploadService.ioexception = Filen kunde inte kopieras. VÃ¤nligen kontakta administratÃ¶ren.
-uploadService.wrongFileType = Fel filformat valt. LÃ¤gg upp en bild.
-uploadService.productPhotoNotSpecified = LÃ¤gg upp en produkt foto.
-uploadService.productIngredientsPhotoNotSpecified = LÃ¤gg upp en bild pÃ¥ ingredienslistan.
-uploadService.ingredientsImageIsTooSmall = Foto av ingredienslistan Ã¤r fÃ¶r liten.
+user.error.emailexists = Denna e-postadress används redan.
+user.error.nopassword = Ange ett lösenord.
+user.error.passwordsdontmatch = Lösenorden stämmer inte överens.
+user.error.nickexists = Det här användarnamnet används redan.
+uploadService.ioexception = Filen kunde inte kopieras. Vänligen kontakta administratören.
+uploadService.wrongFileType = Fel filformat valt. Lägg upp en bild.
+uploadService.productPhotoNotSpecified = Lägg upp en produkt foto.
+uploadService.productIngredientsPhotoNotSpecified = Lägg upp en bild på ingredienslistan.
+uploadService.ingredientsImageIsTooSmall = Foto av ingredienslistan är för liten.
 
 #Emailai
 mail.subject.productProblemsubject = Problem with a product
