--- a/src/main/resources/messages_se_SE.properties
+++ b/src/main/resources/messages_se_SE.properties
@@ -3,7 +3,7 @@ site.attention = Attention\!
 site.email = info@inbelly.co.uk
 site.domain = inbelly.co.uk
 site.blog = blog.inbelly.co.uk
-site.description = Konstgjorda tillsatser i livsmedel har blivit ett stort problem. Tillverkarna övertyga oss om att alla livsmedelstillsatser som används inom EU är säkra, men vetenskapliga fakta talar ett helt annat historia.\n\nVår idé är att samla all info om livsmedelstillsats (färger, konserveringsmedel, smakförstärkare och andra numren E) samt möjliga konsekvenser av deras konsumtion och visa de produkter som innehåller dessa.
+site.description = Konstgjorda tillsatser i livsmedel har blivit ett stort problem. Tillverkarna \u00f6vertyga oss om att alla livsmedelstillsatser som anv\u00e4nds inom EU \u00e4r s\u00e4kra, men vetenskapliga fakta talar ett helt annat historia.\n\nV\u00e5r id\u00e9 \u00e4r att samla all info om livsmedelstillsats (f\u00e4rger, konserveringsmedel, smakf\u00f6rst\u00e4rkare och andra numren E) samt m\u00f6jliga konsekvenser av deras konsumtion och visa de produkter som inneh\u00e5ller dessa.
 
 index.blogUrl=http://blog.inbelly.co.uk
 index.faceBookUrl=http://www.facebook.com/inbelly
@@ -12,31 +12,31 @@ bottomLinks.mailUrl=mailto:info@inbelly.co.uk
 bottomLinks.blogUrl=http://blog.inbelly.co.uk
 
 #Kenksmingumai
-hazard.-1.desc = Okänd
+hazard.-1.desc = Ok\u00e4nd
 hazard.0.desc = Ingen
-hazard.1.desc = Vara säker
+hazard.1.desc = Vara s\u00e4ker
 hazard.2.desc = Tvivelaktigt
 hazard.3.desc = Farligt
-hazard.4.desc = Förbjudet i vissa länder
+hazard.4.desc = F\u00f6rbjudet i vissa l\u00e4nder
 
-zymejimoPaaiskinimai.hazard-1 = Okänd livsmedelstillsatser
+zymejimoPaaiskinimai.hazard-1 = Ok\u00e4nd livsmedelstillsatser
 zymejimoPaaiskinimai.hazard-1.desc = Vet vi ingenting om riskerna med denna ingrediens.
 zymejimoPaaiskinimai.hazard0 = Ingen livsmedelstillsatser
 zymejimoPaaiskinimai.hazard0.desc = Tillverkaren inte anger tillsatser bland produktens ingredienser.
-zymejimoPaaiskinimai.hazard1 = Vara säker livsmedelstillsatser
-zymejimoPaaiskinimai.hazard1.desc = Produkten innehåller tillsatser vars effekt är okänd eller har varit vetenskapligt bevisat säker.
+zymejimoPaaiskinimai.hazard1 = Vara s\u00e4ker livsmedelstillsatser
+zymejimoPaaiskinimai.hazard1.desc = Produkten inneh\u00e5ller tillsatser vars effekt \u00e4r ok\u00e4nd eller har varit vetenskapligt bevisat s\u00e4ker.
 zymejimoPaaiskinimai.hazard2 = Tvivelaktigt livsmedelstillsatser
-zymejimoPaaiskinimai.hazard2.desc = Vissa källor hävdar dessa tillsatser kan ha en negativ inverkan på människors hälsa. Det finns dock inget obestridligt bevis på att effekterna är allmänt upplevs. Det är lämpligt att behålla försiktighet om produkter med dessa tillsatser är att konsumeras av barn (särskilt under 3 år) och vuxna med ökad känslighet eller en benägenhet för särskilda villkor.
+zymejimoPaaiskinimai.hazard2.desc = Vissa k\u00e4llor h\u00e4vdar dessa tillsatser kan ha en negativ inverkan p\u00e5 m\u00e4nniskors h\u00e4lsa. Det finns dock inget obestridligt bevis p\u00e5 att effekterna \u00e4r allm\u00e4nt upplevs. Det \u00e4r l\u00e4mpligt att beh\u00e5lla f\u00f6rsiktighet om produkter med dessa tillsatser \u00e4r att konsumeras av barn (s\u00e4rskilt under 3 \u00e5r) och vuxna med \u00f6kad k\u00e4nslighet eller en ben\u00e4genhet f\u00f6r s\u00e4rskilda villkor.
 zymejimoPaaiskinimai.hazard3 = Farliga livsmedelstillsatser
-zymejimoPaaiskinimai.hazard3.desc = Det finns vetenskapliga påståenden bevisar att större mängder av denna tillsats eller dess förening med andra tillsatser kan resultera i en hälsorisk. Tillverkare rekommenderas att begränsa användningen av dessa tillsatser.
-zymejimoPaaiskinimai.hazard4 = Förbjudet i vissa länder livsmedelstillsatser
-zymejimoPaaiskinimai.hazard4.desc = Användningen av denna tillsats är förbjudet i en eller flera av dessa länder\: USA, Kanada, Australien, Nya Zeeland (explicit anges för varje tillsats). Bestäm själv\!
+zymejimoPaaiskinimai.hazard3.desc = Det finns vetenskapliga p\u00e5st\u00e5enden bevisar att st\u00f6rre m\u00e4ngder av denna tillsats eller dess f\u00f6rening med andra tillsatser kan resultera i en h\u00e4lsorisk. Tillverkare rekommenderas att begr\u00e4nsa anv\u00e4ndningen av dessa tillsatser.
+zymejimoPaaiskinimai.hazard4 = F\u00f6rbjudet i vissa l\u00e4nder livsmedelstillsatser
+zymejimoPaaiskinimai.hazard4.desc = Anv\u00e4ndningen av denna tillsats \u00e4r f\u00f6rbjudet i en eller flera av dessa l\u00e4nder\: USA, Kanada, Australien, Nya Zeeland (explicit anges f\u00f6r varje tillsats). Best\u00e4m sj\u00e4lv\!
 zymejimoPaaiskinimai.notVegan = Kan vara av animaliskt ursprung
-zymejimoPaaiskinimai.notVegan.desc = Tillsatsen kan ha tillverkats med animaliska ingredienser. Emellertid kan det också vara syntetiska.
-zymejimoPaaiskinimai.gmo = Kan innehålla GMO
-zymejimoPaaiskinimai.gmo.desc = Produkten innehåller tillsatser som är genetiskt modifierade själva eller har framställts med hjälp av genetiskt modifierat material.
+zymejimoPaaiskinimai.notVegan.desc = Tillsatsen kan ha tillverkats med animaliska ingredienser. Emellertid kan det ocks\u00e5 vara syntetiska.
+zymejimoPaaiskinimai.gmo = Kan inneh\u00e5lla GMO
+zymejimoPaaiskinimai.gmo.desc = Produkten inneh\u00e5ller tillsatser som \u00e4r genetiskt modifierade sj\u00e4lva eller har framst\u00e4llts med hj\u00e4lp av genetiskt modifierat material.
 zymejimoPaaiskinimai.legal1=XXXX * XXXX Pagal Lietuvos higienos norm\u0105 HN 119\:2002 ir HN 53\:2003, gamintojas privalo skelbti maisto produkt\u0173 sud\u0117t\u012F.
-zymejimoPaaiskinimai.legal2 = XXXX ** Vi har samlat in information om de negativa hälsoeffekterna av tillsatser i specificerade vetenskapligt jordade källor. Alternativ forskning kan neka dessa påståenden. <br/> Tillverkare tenderar att vara oense med de flesta av dessa fynd.
+zymejimoPaaiskinimai.legal2 = XXXX ** Vi har samlat in information om de negativa h\u00e4lsoeffekterna av tillsatser i specificerade vetenskapligt jordade k\u00e4llor. Alternativ forskning kan neka dessa p\u00e5st\u00e5enden. <br/> Tillverkare tenderar att vara oense med de flesta av dessa fynd.
 
 
 
@@ -49,24 +49,24 @@ product.grouping.required = Ange produktkategori
 product.user.nick.required = Ange ditt namn
 
 #Validatoriai
-comment.error.notext = Ange översyn text
+comment.error.notext = Ange \u00f6versyn text
 comment.error.noname = Ange ditt namn
 e.error.nonumber = Ange E-nummer!
 product.error.noname = Ange produktnamn
-product.error.conservantfree = Om det finns tillsatser i produkten måste "Inga" kryssrutan vara tydlig
-product.error.noconservants = Om det inte finns några tillsatser i produkten, kryssa för "Ingen" kryssrutan
+product.error.conservantfree = Om det finns tillsatser i produkten m\u00e5ste "Inga" kryssrutan vara tydlig
+product.error.noconservants = Om det inte finns n\u00e5gra tillsatser i produkten, kryssa f\u00f6r "Ingen" kryssrutan
 user.error.nonick = Ange ditt namn
 user.error.noemail = Ange e-post.
 user.error.bademail = Ogiltig e-post.
-user.error.emailexists = Denna e-postadress används redan.
-user.error.nopassword = Ange ett lösenord.
-user.error.passwordsdontmatch = Lösenorden stämmer inte överens.
-user.error.nickexists = Det här användarnamnet används redan.
-uploadService.ioexception = Filen kunde inte kopieras. Vänligen kontakta administratören.
-uploadService.wrongFileType = Fel filformat valt. Lägg upp en bild.
-uploadService.productPhotoNotSpecified = Lägg upp en produkt foto.
-uploadService.productIngredientsPhotoNotSpecified = Lägg upp en bild på ingredienslistan.
-uploadService.ingredientsImageIsTooSmall = Foto av ingredienslistan är för liten.
+user.error.emailexists = Denna e-postadress anv\u00e4nds redan.
+user.error.nopassword = Ange ett l\u00f6senord.
+user.error.passwordsdontmatch = L\u00f6senorden st\u00e4mmer inte \u00f6verens.
+user.error.nickexists = Det h\u00e4r anv\u00e4ndarnamnet anv\u00e4nds redan.
+uploadService.ioexception = Filen kunde inte kopieras. V\u00e4nligen kontakta administrat\u00f6ren.
+uploadService.wrongFileType = Fel filformat valt. L\u00e4gg upp en bild.
+uploadService.productPhotoNotSpecified = L\u00e4gg upp en produkt foto.
+uploadService.productIngredientsPhotoNotSpecified = L\u00e4gg upp en bild p\u00e5 ingredienslistan.
+uploadService.ingredientsImageIsTooSmall = Foto av ingredienslistan \u00e4r f\u00f6r liten.
 
 #Emailai
 mail.subject.productProblemsubject = Problem with a product
