--- a/src/main/resources/messages_se_SE.properties
+++ b/src/main/resources/messages_se_SE.properties
@@ -117,7 +117,7 @@ header.createProduct = Ange produkt
 header.createProductImgAlt = Bidra!
 header.searchExample = t. ex. chips, E120, lecitin
 
-header.menu.main = Home
+header.menu.main = Hem
 header.menu.products = Produkter
 header.menu.conservants = Livsmedelstillsatser
 header.menu.sources = Datak\u00e4llor
@@ -406,7 +406,7 @@ eform.bannedInAustralia = Australien / Nya Zeeland
 
 footer.createProduct = bidra en produkt
 footer.contactUs = Vi skulle vara tacksamma om du gett oss feedback och problem rapporter. F\u00f6r tillverkare\: Ange ditt egna produkter och <a href\="mailto\:info@inbelly.co.uk"> meddela oss om eventuella fel som du st\u00f6ter p\u00e5</a>.
-footer.legal = All information om tillsatser och deras eventuella h\u00e4lsorisker tas fr\u00e5n specificerade k\u00e4llor. All information som finns p\u00e5 denna webbplats \u00e4r fritt tillg\u00e4ngligt f\u00f6r allm\u00e4nheten och inte partiska eller riktat mot n\u00e5gra specifika produkter eller producenter. Informationen \u00e4r inte heller partisk fr\u00e5n vissa producenter perspective.Information om ingredienserna i s\u00e4rskilda produkter in fr\u00e5n etiketterna p\u00e5 sj\u00e4lva f\u00f6rpackningen av registrerade anv\u00e4ndare f\u00f6lja anv\u00e4ndarvillkoren Service.inbelly inte utv\u00e4rdera eller ge sitt eget yttrande p\u00e5 livsmedel eller resultat vetenskaplig forskning. inbelly ger dig k\u00e4llor enligt vilka du b\u00f6r g\u00f6ra dina egna slutsatser. Vi skulle vara mycket tacksam f\u00f6r era kommentarer och fel notifications.The information om skadliga biverkningar baseras p\u00e5 vetenskaplig forskning fr\u00e5n specificerade k\u00e4llor. Annan forskning kan ifr\u00e5gas\u00e4tta dessa slutsatser. Tillverkarna tenderar att argumentera mot de flesta av dessa resultat. inbelly avgr\u00e4nsar sig fr\u00e5n n\u00e5got r\u00e4ttsligt ansvar i samband med felaktiga l\u00e4mnade uppgifter. Alla tillsatser som n\u00e4mns p\u00e5 inbelly \u00e4r godk\u00e4nda f\u00f6r anv\u00e4ndning inom EU, d\u00e4rf\u00f6r kr\u00e4nker en producent inte n\u00e5gon lagstiftning om tillsatser anv\u00e4nds f\u00f6reskrivs av  <a href\="http\://ec.europa.eu/food/fs/sfp/flav_index_en.html">EU lagstiftning om livsmedelstillsatser</a> .
+footer.legal = Alla informationen om tillsatser och deras eventuella h\u00e4lsorisker tas fr\u00e5n specificerade k\u00e4llor. Alla informationen som finns p\u00e5 denna webbplats \u00e4r fritt tillg\u00e4ngligt f\u00f6r allm\u00e4nheten och inte partiska eller riktat mot n\u00e5gra specifika produkter eller producenter. Informationen \u00e4r inte heller partisk fr\u00e5n vissa producenter perspective.Information om ingredienserna i s\u00e4rskilda produkter in fr\u00e5n etiketterna p\u00e5 sj\u00e4lva f\u00f6rpackningen av registrerade anv\u00e4ndare f\u00f6lja anv\u00e4ndarvillkoren Service.inbelly inte utv\u00e4rdera eller ge sitt eget yttrande p\u00e5 livsmedel eller resultat vetenskaplig forskning. inbelly ger dig k\u00e4llor enligt vilka du b\u00f6r g\u00f6ra dina egna slutsatser. Vi skulle vara mycket tacksam f\u00f6r era kommentarer och fel notifications.The information om skadliga biverkningar baseras p\u00e5 vetenskaplig forskning fr\u00e5n specificerade k\u00e4llor. Annan forskning kan ifr\u00e5gas\u00e4tta dessa slutsatser. Tillverkarna tenderar att argumentera mot de flesta av dessa resultat. inbelly avgr\u00e4nsar sig fr\u00e5n n\u00e5got r\u00e4ttsligt ansvar i samband med felaktiga l\u00e4mnade uppgifter. Alla tillsatser som n\u00e4mns p\u00e5 inbelly \u00e4r godk\u00e4nda f\u00f6r anv\u00e4ndning inom EU, d\u00e4rf\u00f6r kr\u00e4nker en producent inte n\u00e5gon lagstiftning om tillsatser anv\u00e4nds f\u00f6reskrivs av  <a href\="http\://ec.europa.eu/food/fs/sfp/flav_index_en.html">EU lagstiftning om livsmedelstillsatser</a> .
 
 footer.copyright=&copy; se.inbelly.com, 2012.
 
@@ -420,7 +420,7 @@ error.unknownmsg = Ok\u00e4nt fel
 error.400.msg = Bad f\u00f6rfr\u00e5gan (400)
 error.403.msg = Otill\u00e5ten! (403)
 error.404.msg = Ingen s\u00e5dan sida? .. (404)
-error.500.msg = N\u00e5got g\u00e5r s\u00f6nder ... H\u00e5ll dig lugn, vi arbetar p\u00e5 problemet\! (500)
+error.500.msg = N\u00e5got g\u00e5r s\u00f6nder... H\u00e5ll dig lugn, vi arbetar p\u00e5 problemet\! (500)
 
 barcode.check=Kontrollera
 barcode.incorrect = Streckkoden du angav \u00e4r felaktig, v\u00e4nligen kontrollera
