--- a/src/main/resources/shoppingBasketmessages_se_SE.properties
+++ b/src/main/resources/shoppingBasketmessages_se_SE.properties
@@ -1,15 +1,15 @@
-site.basket = S\u0105ra\u0161as
+site.basket = listan
 
-basket.noProductsInBasket = Pirkini\u0173 s\u0105ra\u0161e n\u0117ra produkt\u0173.
-basket.yourBasket=J\u016Bs\u0173 pirkini\u0173 s\u0105ra\u0161as
-basket.whatsThat=kas tai?
-basket.print=spausdinti
-basket.about=Pirkini\u0173 s\u0105ra\u0161as - tai j\u016Bs\u0173 m\u0117giam\u0173 produkt\u0173 s\u0105ra\u0161as. Susid\u0117j\u0119 produktus \u012F savo pirkini\u0173 s\u0105ra\u0161\u0105 ir j\u012F atsispausdin\u0119, parduotuv\u0117je visuomet gal\u0117site nesunkiai susirinkti produktus.
-basket.add=\u012Esid\u0117t produkt\u0105 \u012F pirkini\u0173 s\u0105ra\u0161\u0105
-basket.remove=I\u0161imti produkt\u0105 i\u0161 pirkini\u0173 s\u0105ra\u0161o
-basket.added=Produktas s\u0117kmingai prid\u0117tas \u012F j\u016Bs\u0173 <a href\="basket">pirkini\u0173 s\u0105ra\u0161\u0105</a> &nbsp; <a href\="productList">Gr\u012F\u017Eti \u012F produkt\u0173 s\u0105ra\u0161\u0105</a>
-basket.addd=\u012Esid\u0117ti
-basket.addd2=produkt\u0105 \u012F <a href\="basket">pirkini\u0173 s\u0105ra\u0161\u0105</a>
-basket.removed=Produktas s\u0117kmingai i\u0161imtas i\u0161 j\u016Bs\u0173 <a href\="basket">pirkini\u0173 s\u0105ra\u0161o</a> &nbsp; <a href\="productList">Gr\u012F\u017Eti \u012F produkt\u0173 s\u0105ra\u0161\u0105</a>
-basket.isInBasket=\u0160is produktas yra j\u016Bs\u0173 <a href\="basket">pirkini\u0173 s\u0105ra\u0161e</a>
+basket.noProductsInBasket = ingen ink\u00f6pslista av produkter.
+basket.yourBasket = din ink\u00f6pslista
+basket.whatsThat = vad \u00e4r det?
+basket.print = Skriv ut
+basket.about = ink\u00f6pslista - en lista \u00f6ver dina favorit-produkter. Bestod av produkter i din ink\u00f6pslista och skriva ut det, kan du handla alltid l\u00e4tt monterar produkter.
+basket.add = \u012esid\u0117t produkten till ink\u00f6pslistan
+basket.remove = Ta bort produkten fr\u00e5n ink\u00f6pslista
+basket.added=Produkten har lagts i din <a href\="basket">ink\u00f6pslista</a>&nbsp;<a href\="productList">Tillbaka till listan</a>
+basket.addd = L\u00e4gg till
+basket.addd2 = produkt = <a href\="basket">i ink\u00f6pslista</a>
+basket.removed = Produkten borttagna fr\u00e5n din <a href\="basket">ink\u00f6pslista</a>&nbsp; <a href\="productList"> Tillbaka till listan </a>
+basket.isInBasket = Denna produkt finns p\u00e5 din <a href\="basket">ink\u00f6pslista</a>
 
