--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -88,6 +88,9 @@ mail.body.sendNewPasswordEmail = Hello,\n\n\nYour password at "{0}" is now\: "{2
 ApprovedContentFilter.desc.first = with confirmed ingredients only
 ApprovedContentFilter.desc = and ingredients are confirmed
 
+UnapprovedProductFilter.desc.first = with unconfirmed ingredients only
+UnapprovedProductFilter.desc = and ingredients are unconfirmed
+
 CategoryFilter.desc.first = {0}
 CategoryFilter.desc = {0}
 
