--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -91,6 +91,9 @@ ApprovedContentFilter.desc = and ingredients are confirmed
 UnapprovedProductFilter.desc.first = with unconfirmed ingredients only
 UnapprovedProductFilter.desc = and ingredients are unconfirmed
 
+ApprovedProductFilter.desc.first = with confirmed ingredients only
+ApprovedProductFilter.desc = and ingredients are confirmed
+
 CategoryFilter.desc.first = {0}
 CategoryFilter.desc = {0}
 
