--- a/src/main/resources/messages_se_SE.properties
+++ b/src/main/resources/messages_se_SE.properties
@@ -91,6 +91,9 @@ ApprovedContentFilter.desc = och ingredienser bekr\u00E4ftas
 UnapprovedProductFilter.desc.first = with unconfirmed ingredients only
 UnapprovedProductFilter.desc = and ingredients are unconfirmed
 
+ApprovedProductFilter.desc.first = with confirmed ingredients only
+ApprovedProductFilter.desc = and ingredients are confirmed
+
 CategoryFilter.desc.first = {0}
 CategoryFilter.desc = {0}
 
