Implemented an image size check when entering a new product.

--- a/src/main/resources/messages_se_SE.properties
+++ b/src/main/resources/messages_se_SE.properties
@@ -66,7 +66,7 @@ uploadService.ioexception = Filen kunde inte kopieras. V\u00E4nligen kontakta ad
 uploadService.wrongFileType = Fel filformat valt. L\u00E4gg upp en bild.
 uploadService.productPhotoNotSpecified = L\u00E4gg upp en produkt foto.
 uploadService.productIngredientsPhotoNotSpecified = L\u00E4gg upp en bild p\u00E5 ingredienslistan.
-uploadService.ingredientsImageIsTooSmall = Foto av ingredienslistan \u00E4r f\u00F6r liten.
+uploadService.fileTooSmall = The file you specified is too small.
 
 #Emailai
 mail.subject.productProblemsubject = Problem med en produkt
