Added alternative text for unapproved products; Did some ajustments

--- a/src/main/resources/messages_se_SE.properties
+++ b/src/main/resources/messages_se_SE.properties
@@ -232,6 +232,7 @@ productList.feeds.rss = RSS
 productList.feeds.atom = Atom
 productList.feeds.json = JSON
 productList.noSearchResults = Inga varor som matchar din s\u00F6kning.
+productList.productNotApproved = This product is not approved.
 
 paginator.totalPages=Sidor ({0} totalt)
 paginator.back = F\u00F6reg\u00E5ende
