--- a/src/main/resources/messages_se_SE.properties
+++ b/src/main/resources/messages_se_SE.properties
@@ -232,7 +232,7 @@ productList.feeds.rss = RSS
 productList.feeds.atom = Atom
 productList.feeds.json = JSON
 productList.noSearchResults = Inga varor som matchar din s\u00F6kning.
-productList.productNotApproved = This product is not approved.
+productList.productNotApproved = Ingredienslistan \u00e4r inlagd av andra inBelly anv\u00e4ndare precis som du och vi kan alla g\u00f6ra ett Misstag. D\u00e4rf\u00f6r ber vi andra anv\u00e4ndare att bekr\u00e4fta att den skrivna ingrediensen matchar ingredienslistan p\u00e5 bilden.
 
 paginator.totalPages=Sidor ({0} totalt)
 paginator.back = F\u00F6reg\u00E5ende
