Small template fix.

--- a/src/main/resources/messages_se_SE.properties
+++ b/src/main/resources/messages_se_SE.properties
@@ -70,7 +70,7 @@ uploadService.fileTooSmall = The file you specified is too small.
 
 #Emailai
 mail.subject.productProblemsubject = Problem med en produkt
-mail.body.productProblemEmail = \n\n\nProdukt\: {0}\n\n
+mail.body.productProblemEmail = \n\n\nProdukt\: {0}
 
 # Nuoroda \u012f sveikasvaikas.lt - {0}
 mail.subject.sendProductSubject = N\u00E5gon skickar en l\u00E4nk till {0} - {1}
