Tekstu redagavimas E redagavimas Bugfix, kad nenuluztu, kai neprisijunges naudotojas

--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -12,7 +12,7 @@ bottomLinks.mailUrl=mailto:info@inbelly.co.uk
 bottomLinks.blogUrl=http://blog.inbelly.co.uk
 
 #Kenksmingumai
-hazard.-1.desc=Unknown 
+hazard.-1.desc=Unknown
 hazard.0.desc=No 
 hazard.1.desc=Considered safe
 hazard.2.desc=Questionable
@@ -126,9 +126,11 @@ header.searchExample = E. g. crisps, E120, lecithin
 header.menu.main=Home
 header.menu.products=Products
 header.menu.conservants=Food additives
+header.menu.editConservant=Edit food additive\:
 header.menu.sources=Data sources
 header.menu.friends=Friends
 header.menu.istirtas=Tested products
+header.menu.settings=Settings
 
 productsFeedLink.rss=RSS feed
 productsFeedLink.atom=Atom feed
@@ -247,6 +249,8 @@ eList.createE=Enter new additive
 eList.downloadPdfUrl=http://XXXXXXXXXX.pdf
 eList.downloadPdfLink=Download a printable additive list
 
+eTable.conservantCodeTitle=Additive E-code\:
+eTable.name=Name
 eTable.notVegan=May be of animal origin
 eTable.detectedInProducts=Product count: ({0})
 eTable.diseases=May cause or aggravate these conditions
@@ -390,6 +394,7 @@ crop.originalPhoto=Original image
 crop.croppedPhoto=Cropped image
 
 eform.addE=E editor
+eform.approved=Approved
 eform.eCode=E number
 eform.eName=E name
 eform.eEnglishName=Full name in English
@@ -409,6 +414,13 @@ eform.eBanned=Banned in
 eform.bannedInUsa=USA
 eform.bannedInCanada=Canada
 eform.bannedInAustralia=Australia / New Zealand
+
+messagesList.title=Edit field text
+messagesList.edit=[Edit]
+messages.field.locale=Language
+messages.field.code=Field code
+messages.save=Save
+messages.close=Close
 
 footer.createProduct=Contribute a product 
 footer.contactUs=We would be grateful if you provided us with feedback and problem reports. For manufacturers\: please enter your own products and <a href\="mailto\:info@inbelly.co.uk"> notify us of any errors that you encounter</a>. 
