--- a/src/main/resources/messages_lt_LT.properties
+++ b/src/main/resources/messages_lt_LT.properties
@@ -16,6 +16,7 @@ hazard.2.desc=Abejotinas
 hazard.3.desc=Vengtinas
 hazard.4.desc=U\u017Edraustas kai kuriose \u0161alyse
 hazard.0.desc=N\u0117ra joki\u0173 pried\u0173
+hazard.-1.desc = Ne\u017Einomas
 
 #Bind errorai
 product.name.required=Nurodykite produkto pavadinim\u0105
@@ -90,9 +91,11 @@ header.searchExample = Pvz. var\u0161k\u0117, E120, lecitinas
 header.menu.main=Pagrindinis
 header.menu.products=Produktai
 header.menu.conservants=Priedai ir konservantai
+header.menu.editConservant=Priedo ar konservanto informacijos redagavimas\:
 header.menu.sources=\u0160altiniai
 header.menu.friends=Draugai
 header.menu.istirtas=I\u0161tirti produktai
+header.menu.settings=Nustatymai
 
 productsFeedLink.rss=Produkt\u0173 s\u0105ra\u0161as RSS formatu
 productsFeedLink.atom=Produkt\u0173 s\u0105ra\u0161as Atom formatu
@@ -139,6 +142,8 @@ product.reportInaccuracy=Prane\u0161ti apie netikslumus...
 product.link=Produkto nuoroda
 product.unapprovedIngredients=PRODUKTO SUD\u0116TIS NEPATVIRTINTA, PRA\u0160OME PRANE\u0160TI APIE NETIKSLUMUS
 product.fixIngredients=Patikslinti sud\u0117t\u012F...
+product.confirmedBy = Patvirtino
+product.reportedBy = Prane\u0161\u0117
 
 product.reportForm.title=Prane\u0161kite apie netikslumus
 product.reportForm.email=J\u016Bs\u0173 el. pa\u0161to adresas
@@ -198,9 +203,8 @@ eList.createE=Kurti nauj\u0105 E
 eList.downloadPdfUrl=http://blog.sveikasvaikas.lt/wp-content/uploads/2009/04/kenksmingipriedai.pdf
 eList.downloadPdfLink=Parsisi\u0173skite atskirai sudaryt\u0105 konservant\u0173 s\u0105ra\u0161\u0105 spausdinimui
 
-eTable.notVegan=Gali b\u016Bti gyvulin\u0117s kilm\u0117s
-eTable.detectedInProducts=Detected in {0} products
-eTable.diseases=Gali kilti arba pa\u016Bm\u0117ti \u0161ios ligos
+eTable.conservantCodeTitle=Priedo ar konservanto numeris\:
+eTable.name=Pavadinimas
 eTable.diseasesLinks=Nuorodos \u012F informacij\u0105 apie ligas
 eTable.bannedLinks=Nuorodos \u012F informacij\u0105 apie draudimus
 eTable.bannedIn=Banned in
@@ -209,7 +213,12 @@ eTable.bannedIn.canada=Canada
 eTable.bannedIn.australia=Australia and New Zealand
 eTable.moreInfo=More info
 eTable.excange=pakeisti kitu
+eTable.edit = Redaguoti
+eTable.delete = I\u0161trinti
+eTable.deleteFromProduct = I\u0161trinti i\u0161 produkto
+eTable.confirm = Patvirtinti
 eTable.notApprovedDisclaimer=Informacija apie geltonai pa\u017Eym\u0117tus konservantus dar n\u0117ra patvirtinta\!
+
 
 replaceEForm.description=Keisti pried\u0105 <strong>{0} ({1})</strong> visuose produktuose \u012F pried\u0105
 replaceEForm.replace=Keisti
@@ -342,6 +351,7 @@ crop.originalPhoto=Originali nuotrauka
 crop.croppedPhoto=Apkirpta
 
 eform.addE=E \u012Fvedimas
+eform.approved=Patvirtintas
 eform.eCode=Numeris
 eform.eName=Pavadinimas
 eform.eEnglishName=Pavadinimas (angli\u0161kai)
@@ -360,7 +370,16 @@ eform.eGmo=Gmo
 eform.eBanned=Draud\u017Eiamas
 eform.bannedInUsa=Amerikoje
 eform.bannedInCanada=Kanadoje
-eform.bannedInAustralia=Australijoje
+eform.bannedInAustralia=Australijoje ir Naujojoje Zelandijoje
+
+messagesList.title=Tekst\u0173 redagavimas
+messagesList.edit=[Redaguoti]
+messages.field.locale=Kalba
+messages.field.code=Lauko kodas
+messages.save=I\u0161saugoti
+messages.close=U\u017Edaryti
+
+
 
 footer.createProduct=Pad\u0117kite pildyti
 footer.contactUs=B\u016Btume d\u0117kingi u\u017E J\u016Bs\u0173 pastabas ir nurodytas klaidas. Gamintojams\: <a href\="mailto\:info@sveikasvaikas.lt">Pad\u0117kite pildyti ir prane\u0161kite apie netikslumus</a>
