Pataisyta klaida, kai suluzdavo ingredientu (E) rodymas redaguojant produkta (del neuzpildyti conservantsText produkte). Taip pat kai kur idetos lang konstantos

--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -213,6 +213,7 @@ product.commentsForm.website=Your website
 product.commentsForm.text=Product review
 product.viewCount=views
 product.details=Product details
+product.eList=Additives
 confirm.really=Are you sure?
 
 emailSent.title=Thanks for participating
