--- a/src/main/resources/messages_lt_LT.properties
+++ b/src/main/resources/messages_lt_LT.properties
@@ -168,6 +168,7 @@ product.commentsForm.name=J\u016Bs\u0173 vardas
 product.commentsForm.email=J\u016Bs\u0173 el. pa\u0161to adresas
 product.commentsForm.website=J\u016Bs\u0173 svetain\u0117s adresas
 product.commentsForm.text=Ap\u017Evalgos tekstas
+product.eList=Papild\u0173 s\u0105ra\u0161as
 product.viewCount=views
 confirm.really=Really?
 
