--- a/src/main/resources/messages_se_SE.properties
+++ b/src/main/resources/messages_se_SE.properties
@@ -213,6 +213,7 @@ product.commentsForm.website = Din webbplats
 product.commentsForm.text = Produkten granskning
 product.viewCount = vyer
 product.details = Produkten information
+product.eList = Tillsatser
 confirm.really = \u00C4r du s\u00E4ker?
 
 emailSent.title=Tack f\u00F6r deltagande
