hired guns implemented these changes

--- a/src/main/resources/messages_se_SE.properties
+++ b/src/main/resources/messages_se_SE.properties
@@ -126,9 +126,11 @@ header.searchExample = t. ex. chips, E120, lecitin
 header.menu.main = Hem
 header.menu.products = Produkter
 header.menu.conservants = Livsmedelstillsatser
+header.menu.editConservant=Edit food additive\:
 header.menu.sources = Datak\u00E4llor
 header.menu.friends = V\u00E4nner
 header.menu.istirtas = testade produkter
+header.menu.settings=Settings
 
 productsFeedLink.rss=RSS feed
 productsFeedLink.atom=Atom feed
@@ -211,6 +213,7 @@ product.commentsForm.website = Din webbplats
 product.commentsForm.text = Produkten granskning
 product.viewCount = vyer
 product.details = Produkten information
+product.eList = Tillsatser
 confirm.really = \u00C4r du s\u00E4ker?
 
 emailSent.title=Tack f\u00F6r deltagande
@@ -248,6 +251,8 @@ eList.createE = Ange ny fodertillsats
 eList.downloadPdfUrl = http://XXXXXXXXXX.pdf
 eList.downloadPdfLink = Ladda ner en utskrivbar additiv lista
 
+eTable.conservantCodeTitle=Additive E-code\:
+eTable.name=Name
 eTable.notVegan = kan vara av animaliskt ursprung
 eTable.detectedInProducts = Produkten count: ({0})
 eTable.diseases = Kan orsaka eller f\u00F6rv\u00E4rra dessa tillst\u00E5nd
@@ -391,6 +396,7 @@ crop.originalPhoto = Originalbild
 crop.croppedPhoto = beskurna bilden
 
 eform.addE = E redakt\u00F6r
+eform.approved=Approved
 eform.eCode = E-nummer
 eform.eName = E namnet
 eform.eEnglishName = Fullst\u00E4ndigt namn p\u00E5 engelska
@@ -410,6 +416,13 @@ eform.eBanned = f\u00F6rbjudna i
 eform.bannedInUsa = USA
 eform.bannedInCanada = Kanada
 eform.bannedInAustralia = Australien / Nya Zeeland
+
+messagesList.title=Edit field text
+messagesList.edit=[Redigera]
+messages.field.locale=Language
+messages.field.code=Field code
+messages.save=Spara
+messages.close=Close
 
 footer.createProduct = bidra en produkt
 footer.contactUs = Vi skulle vara tacksamma om du ger oss feedback samt skickar felmeddelanden. F\u00F6r tillverkare\: v\u00E4nligen registrera era produkter och <a href\="mailto\:info@inbelly.co.uk">meddela oss om ni st\u00F6ter p\u00E5 eventuella fel. </a>.
